--- a/assets/css/styles/nav.scss
+++ b/assets/css/styles/nav.scss
@@ -25,7 +25,6 @@
             & a {
                 text-decoration: none;
                 color: #A5A5A5;
-                padding: 2rem 0rem 1.2rem 0rem;
             }
 
             &--active {
@@ -59,6 +58,10 @@
                 padding-bottom: 2em;
                 &--active {
                     border-bottom: 0.5em solid $color-blue;
+                }
+
+                & a {
+                    padding: 2rem 0rem 1.2rem 0rem;
                 }
             }
         
