--- a/assets/css/styles/section_slider.scss
+++ b/assets/css/styles/section_slider.scss
@@ -4,7 +4,7 @@
 }
 
 .slider {
-    margin-top: 2em;
+    margin: 2em 0em 3em 0em;
     
     position: relative;
     width: 100%;
